--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@releases/v2
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BASE_BRANCH: master # The branch the action should deploy from.
-        BRANCH: gh-pages # The branch the action should deploy to.
-        FOLDER: .
+        BASE_BRANCH: master       # Deploy from master...
+        BRANCH: gh-pages          # ...to GitHub pages...
+        BUILD_SCRIPT: make build  # ...run the build action...
+        FOLDER: artifacts/dist    # ...copy the distribution folder.
